@@ -57,7 +57,7 @@ AM_GCONF_SOURCE_2
 dnl ###########################################################################
 dnl   PKG_CONFIG
 dnl ###########################################################################
-PKG_CHECK_MODULES(GNOMEMEETING, gtk+-2.0 >= 2.0.6 esound >= 0.2.28 gconf-2.0 >= 1.2.1 libxml-2.0 >= 2.4.23 libgnome-2.0 >= 2.0.0 libgnomeui-2.0 >= 2.0.0)
+PKG_CHECK_MODULES(GNOMEMEETING, gtk+-2.0 >= 2.0.6 esound >= 0.2.28 gconf-2.0 >= 1.2.1 libxml-2.0 >= 2.6.0 libgnome-2.0 >= 2.0.0 libgnomeui-2.0 >= 2.0.0)
 
 
 dnl ###########################################################################
