@@ -1,5 +1,13 @@
 2003-11-18 Damien Sandras  <dsandras@seconix.com>
 
+	* configure.in: Put an explicit request on libxml 2.6.
+
+	* lib/xdap/xdap.c: "Ported" to 2.6 API.
+
+	* src/main_window.cpp: Fixed dialpad when not being in a call.
+	
+2003-11-18 Damien Sandras  <dsandras@seconix.com>
+
 	* src/gdkvideoio.h, src/vfakeio.cpp, src/vfakeio.h: Added what's
 	required to work with latest CVS.
 	
